<resources>
    <string name="app_name">NostroRistorante</string>
    <string name="hintEmail">Email</string>
    <string name="hintSenha">Senha</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnCadastrar">Cadastre-se</string>
    <string name="tvApresentacao1">Olá, Seja bem vindo ao Nostro Ristorante!\n\n Aqui você encontra o melhor da culinária italiana, com um tempero brasileiro todo especial!</string>
    <string name="tvAndiamo">Andiamo</string>
    <string name="tvCadastro">Per favore, informe seus dados para \n concluir o cadastro!</string>

    <!--Cadastro-->
    <string name="hintNome">Nome</string>
    <string name="hintSobrenome">Sobrenome</string>
    <string name="hintDataNascimento">Data Nascimento. Ex.: 01/01/1990</string>
    <string name="hintTelefone">Telefone</string>
    <string name="hintConfirmarSenha">Confirmar Senha</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--Home-->
    <string name="hintCiao">Ciao,</string>
    <string name="title_activity_teste">Teste</string>

    <!--Perfil-->
    <string name="btnDesconectar">Desconectar</string>

    <!--MenusTitle-->
    <string name="menuTitle">Menu</string>
    <string name="reservarTitle">Reservar</string>
    <string name="perfilTitle">Perfil</string>
    <string name="cancelarreservarTitle">Cancelar reserva</string>
    <string name="cardapioTitle">Cardápio</string>
    <string name="contatoTitle">Contato</string>
    <string name="reservascancelamentosTitle">Reservas e Cancelamentos</string>
    <string name="cardapiomassasTitle">Cardápio/Massas</string>
    <string name="consultarreservasTitle">Consultar Reservas</string>

    <!--Cardapio-->
    <string name="entrada">Entradas</string>
    <string name="acompanhamentos">Acompanhamentos</string>
    <string name="massas">Massas</string>
    <string name="risotos">Risotos</string>
    <string name="Carnes">Carnes</string>
    <string name="doces">Doces/Sobremesas</string>
    <string name="Bebidas">Bebidas</string>
    <string name="Vinhos">Vinhos</string>
    <string name="Cervejas">Cervejas</string>

    <!--Reservas-->
    <string name="msgReservar">Cião! Digite as informações abaixo \n para realizar sua reserva</string>

    <!--Spinner-->
    <string-array name="Spinner_Itens">
        <item>Sim</item>
        <item>Não</item>
    </string-array>


</resources>