<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity"
    android:background="@color/FundoClaro"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gabrielaregular"
            android:text="@string/tvCadastro"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="30sp"/>

        <EditText
            android:id="@+id/idNomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="130dp"
            android:hint="@string/hintNome"
            android:textColor="@color/black"
            android:textColorHint="@color/blackhint"
            android:fontFamily="@font/gabrielaregular"
            android:backgroundTint="@color/VerdeEscuro"/>

        <EditText
            android:id="@+id/idSobrenomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:hint="@string/hintSobrenome"
            android:textColorHint="@color/blackhint"
            android:textColor="@color/black"
            android:fontFamily="@font/gabrielaregular"
            android:backgroundTint="@color/VerdeEscuro"/>


        <EditText
            android:id="@+id/idDateNascimentoCadastro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:hint="@string/hintDataNascimento"
            android:textColorHint="@color/blackhint"
            android:textColor="@color/black"
            android:fontFamily="@font/gabrielaregular"
            android:backgroundTint="@color/VerdeEscuro"/>

        <EditText
            android:id="@+id/idTelefoneCadastro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:hint="@string/hintTelefone"
            android:textColorHint="@color/blackhint"
            android:textColor="@color/black"
            android:backgroundTint="@color/VerdeEscuro"/>

        android:fontFamily="@font/gabrielaregular"/>

        <EditText
            android:id="@+id/idEmailCadastro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:hint="@string/hintEmail"
            android:textColorHint="@color/blackhint"
            android:textColor="@color/black"
            android:fontFamily="@font/gabrielaregular"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/VerdeEscuro"/>


        <EditText
            android:id="@+id/idSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:hint="@string/hintSenha"
            android:textColorHint="@color/blackhint"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:fontFamily="@font/gabrielaregular"
            android:backgroundTint="@color/VerdeEscuro"/>

        <EditText
            android:id="@+id/idConfirmarSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:hint="@string/hintConfirmarSenha"
            android:textColorHint="@color/blackhint"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:fontFamily="@font/gabrielaregular"
            android:backgroundTint="@color/VerdeEscuro"/>

        <Button
            android:id="@+id/idBtnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_button_login"
            android:text="Cadastrar"
            android:textColor="@color/white"
            android:fontFamily="@font/gabrielaregular"/>
    </LinearLayout>

</ScrollView>